# simple_rest_server

./: .gitignore  CMakeLists.txt  logger_factory.cpp  logger_factory.h  rest_request_process.cpp  rest_request_process.h  simple_rest_server.cpp
authlicense/: HWInfo.h  authenticate_license.cpp  authenticate_license.h  base64.cpp  base64.h  openssl-RSA.cpp  openssl-RSA.h
cmake/: workflow-config.cmake
